--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "hanif ryanas",
   "license": "ISC",
   "dependencies": {
+    "atob": "^2.1.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -17,5 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
     "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "cypress": "^10.4.0"
   }
 }
